--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "npm install && mkdir -p dist && cp -R src/* dist/"
+    "build": "npm install && mkdir -p dist && cp -R src/* dist/"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
   "dependencies": {
     "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "fs": "^0.0.1-security",
     "node-fetch": "^3.3.2"
   }
