--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
+    "googleapis": "^144.0.0",
     "node-fetch": "^3.3.2"
   }
 }
